<resources>
    <string name="app_name">Мудрость</string>
    <string name="start_main">Нажми на кнопку внизу и стань мудрее!</string>
    <string name="vdohnovenie">Где искать вдохновение?</string>
    <string name="kak_motivirovat_sebya">Как себя мотивировать?</string>
    <string name="tridtsat_zakonov_zhizni">30 законов жизни</string>
    <string name="vliyaem_na_lyudey">Влияем на людей</string>
    <string name="zastav_sebya_rabotat">Заставь себя работать</string>
    <string name="mirovozrenie">Мировозрение</string>
    <string name="vospitanie">Правила воспитания детей</string>
    <string name="zakoni_semyi">Законы семейной жизни</string>
    <string name="chto_takoe_lubov">Что такое любовь?</string>
    <string name="kak_stat_bogatim">Как стать богатым?</string>

    <string name="btn_retry_test">Пройти еще раз?</string>
    <string name="btn_share_test_results">Поделиться с друзьями</string>
    <string name="btn_go_back_to_main">На главную</string>

    <string name="test_mind_sex_title">Мышление какого пола Вам характерно?</string>
    <string name="test_mind_sex_male_male">Ваш склад мышления резко отличается от противоположного пола, ярко выраженный мужской тип</string>
    <string name="test_mind_sex_male_female">У Вас проявляется склонность к женскому типу мышления</string>
    <string name="test_mind_sex_female_female">Ваш склад мышления резко отличается от противоположного пола, ярко выраженный женский тип</string>
    <string name="test_mind_sex_female_male">У Вас проявляется склонность к мужскому типу мышления</string>
    <string name="test_mind_sex_both">Для Вашего мышления равно характерны мужские и женские черты.</string>

    <string name="test_uverenost_title">Насколько Вы в себе уверены?</string>
    <string name="test_uverenost_A">Вы достаточно уверены в себе, но вам, естественно, не чужды ситуации, в которых вы чувствуете себя неуверенно. Однако вы можете в этом признаться, потому что вы сильная личность. Вам не нужно прикладывать больших усилий, обычно вы и так добиваетесь, чего хотите.</string>
    <string name="test_uverenost_B">Ваша уверенность в себе несколько неустойчива. Если вас поддерживает многолетний опыт, можете считать, что все в порядке. Но незнакомые люди, новые задачи раздражают вас больше, чем это объективно необходимо. В таких случаях вы легко теряете уверенность в своих силах. Тогда в зависимости от настроения вы либо замыкаетесь в себе, либо бываете излишне самоуверенны.</string>
    <string name="test_uverenost_C">Вам явно не хватает положительной самооценки. Вероятно, вы не привыкли доверять окружающим. Вы мучаете себя упреками и воспоминаниями, лишая себя при этом радости жизни. Постарайтесь найти время, чтобы проанализировать причину неуверенности в себе. Если у вас не получится, обратитесь за помощью к психологу.</string>

</resources>
